fix: Fixed the nav menu on mobile service
style: Improve index style to archive better design patterns

--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -2,9 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     width: 100%;
     padding: 0;
     background-color: #f5f5f5;
+    margin-bottom: 1rem;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -29,13 +31,14 @@
 .hero-image{
     flex: 2;
     overflow: hidden;
-
-    max-height: 800px;
+    width: 100%;
+    max-height: 100vh;
 
 }
 .hero-image img {
   width: 100%;
-  height: auto;
+
+
   object-fit: cover;
 }
 
@@ -173,7 +176,6 @@
     border: 1px solid #e2e8f0;
     border-radius: 8px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-    padding: 0;
     text-align: center;
     width: 100%;
     height: auto;
@@ -192,6 +194,7 @@
     padding: 0 0.5rem;
     gap: 3rem;
     flex-grow: 1;
+    margin: 1rem 0;
     
 }
 
@@ -208,12 +211,12 @@
     margin: 0.5rem 0;
 }
 .member-card-container img{
-  max-width: 120px;
-  height: auto; 
+  max-width: 100px;
+  height: auto;
+ 
+  margin: 1rem;
 
 }
-
-
 
 
 .member-card-details{
@@ -271,8 +274,9 @@
   }
 
   .member-card-container img{
-  max-width: 80px;
+  max-width: 70px;
   height: auto; 
+  margin: 0.5rem;
 
   }
 
